2004-04-15  Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	*: README - nowadays it's mono --profile=xxx and not --profile:xxx

2004-04-15  Zoltan Varga  <vargaz@freemail.hu>

	*: Update to latest mono + gtk#.

2003-10-17  Zoltan Varga  <vargaz@freemail.hu>

	* nunit-console.cs: Update to latest nunit.

2003-07-05  Zoltan Varga  <vargaz@freemail.hu>

	* style.xsl: Made the output valid HTML 4.0 Transitional.

2003-07-03  Zoltan Varga  <vargaz@freemail.hu>

	* coverage.c (mono_profiler_startup): Fix startup if no arguments
	are provided.

2003-07-02  Zoltan Varga  <vargaz@freemail.hu>

	* Makefile: Updated to work in the mono CVS directory structure.

	* MonoCovMain.cs gui/gtk/MonoCov.cs gui/qt/MonoCov.cs: Moved all
	non-gui command line processing into a separate class.

	* all: Initial import into CVS.

2003-07-01  Zoltan Varga  <vargaz@freemail.hu>

	* HtmlExporter.cs: Implemented HTML exporter.

	* style.xsl: Small modifications needed by the HTML export method.

2003-06-07  Zoltan Varga  <vargaz@freemail.hu>

	* New version with many enchantments.

2003-01-06  Zoltan Varga  <vargaz@freemail.hu>

	* gui/qt/SourceView.cs: fixed viewing of source files which contain
	tags recognized by QTextEdit.

2003-01-05  Zoltan Varga  <vargaz@freemail.hu>

	* coverage.c: Handle nested types correctly.

2002-12-30  Zoltan Varga  <vargaz@freemail.hu>

	* coverage.c README: Added filters to the back end. They can be used by
	passing the '--coverage-args filterfile=<NAME>' argument on the command
	line.

2002-12-28  Zoltan Varga  <vargaz@freemail.hu>

	* first public version.
